syntax = "proto3";

package customers;
option go_package = "github.com/trmnl-core/services/customers/proto;customers";

service Customers {
	// Creates a new, unverified customer
	rpc Create(CreateRequest) returns (CreateResponse) {}
	// Mark the customer as verified
	rpc MarkVerified(MarkVerifiedRequest) returns (MarkVerifiedResponse) {}
	// Retrieve a customer
	rpc Read(ReadRequest) returns (ReadResponse) {}
	// Marks a customer as inactive
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	// Lists all customers
	rpc List(ListRequest) returns (ListResponse) {}
	// Updates a customer
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
}

enum EventType {
	EventTypeUnknown = 0;
	EventTypeCreated = 1;
	EventTypeUpdated = 2;
	EventTypeDeleted = 3;
	EventTypeVerified = 4;
}

message Event {
	EventType type = 1;
	Customer customer = 2;
	string caller_id = 3;
}

message CreateRequest {
	string id = 1;// deprecated
	string email = 2;
}

message CreateResponse {
	Customer customer = 1;
}

message Customer {
	string id = 1;
	string status = 2; // awaiting_verification, verified, active, inactive
	int64 created = 3;
	string email = 6;
	int64 updated = 7;
}

message DeleteRequest {
	string id = 1;
	string email = 2;
	bool force = 3;
}

message DeleteResponse {
}

message ReadRequest {
	string id = 1;
	string email = 2;
}

message ReadResponse {
	Customer customer = 1;
}

message MarkVerifiedRequest {
	string id = 1;
	string email = 2;
}

message MarkVerifiedResponse {}

message ListRequest {

}

message ListResponse {
	repeated Customer customers = 1;
}

message UpdateRequest {
	Customer customer = 1;
}

message UpdateResponse {}